--- a/mobile/package.json
+++ b/mobile/package.json
@@ -44,7 +44,8 @@
     "react-native-webview": "13.12.5",
     "zustand": "^5.0.3",
     "expo-image-picker": "~16.0.6",
-    "expo-file-system": "~18.0.11"
+    "expo-file-system": "~18.0.11",
+    "expo-dev-client": "~5.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
